rubocop/examples/bad/style_RescueModifier.rb
# Avoid using `rescue` in its modifier form.
